# slate-benchmark

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  bench_info.py  make-plots.sh  mise.toml  run.sh
benches/: slate.rs
golang/: go.mod  go.sum  main.go
iavl/: go.mod  go.sum  main.go
results/: 20250918001853-benchmark-environment.md  20250918001917-append-slate-file.csv  20250918001917-biased-get-slate-file_x.csv  20250918001917-biased-get-slate-file_y.csv  20250918001917-cache0-slate-file.csv  20250918001917-cache1-slate-file.csv  20250918001917-cache2-slate-file.csv  20250918001917-cache3-slate-file.csv  20250918001917-get-slate-file.csv  20250918001917-prove-slate-file.csv  20250918001917-volume-slate-file.csv  20250918090025-benchmark-environment.md  20250918090044-append-seqfile-file.csv  20250918090044-append-slate-memkvs.csv  20250918090044-append-slate-rocksdb.csv  20250918090044-biased-get-hashtree-file_y.csv  20250918090044-biased-get-seqfile-file_y.csv  20250918090044-biased-get-slate-memkvs_y.csv  20250918090044-biased-get-slate-rocksdb_y.csv  20250918090044-biased-get_large-slate-file_x.csv  20250918090044-biased-get_large-slate-file_y.csv  20250918090044-cache0-hashtree-file.csv  20250918090044-cache0-seqfile-file.csv  20250918090044-cache0-slate-memkvs.csv  20250918090044-cache0-slate-rocksdb.csv  20250918090044-cache0_large-slate-file.csv  20250918090044-cache1-hashtree-file.csv  20250918090044-cache1-seqfile-file.csv  20250918090044-cache1-slate-memkvs.csv  20250918090044-cache1-slate-rocksdb.csv  20250918090044-cache1_large-slate-file.csv  20250918090044-cache2-hashtree-file.csv  20250918090044-cache2-seqfile-file.csv  20250918090044-cache2-slate-memkvs.csv  20250918090044-cache2-slate-rocksdb.csv  20250918090044-cache2_large-slate-file.csv  20250918090044-cache3-hashtree-file.csv  20250918090044-cache3-seqfile-file.csv  20250918090044-cache3-slate-memkvs.csv  20250918090044-cache3-slate-rocksdb.csv  (+15 more)
rust/: Cargo.toml
rust/benches/: bench.rs
rust/src/: binarytree.rs  hashtree.rs  lib.rs  main.rs  seqfile.rs  slate.rs  stat.rs
rust/src/hashtree/: binary.rs
rust/src/hashtree/binary/: test.rs
scripts/: hamming-weight.py  histogram-plot.py  plot.py  read_cost.py  (+4 more)
(+16 files in other folders)
