[package]
name = "slate_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
# slate = { git = "https://github.com/torao/stratified-hash-tree", rev = "46d6155" }
slate = { path = "../slate", features = ["rocksdb", "blake3"] }
clap = { version = "4.5.45", features = ["derive"] }
byteorder = "1.5"
tempfile = "3.0"
thiserror = "2.0.14"
chrono = "0.4"
rocksdb = { version = "0.24.0", default-features = false, features = [] }
blake3 = "1.8"
#mt19937 = "3"
rand = "0.9.2"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3.20.0"
