[package]
name = "slate_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
slate = { git = "https://github.com/torao/slate", rev = "302343d", features = ["rocksdb", "blake3"] }
clap = { version = "4.5.47", features = ["derive"] }
byteorder = "1.5"
tempfile = "3.21.0"
thiserror = "2.0.16"
chrono = "0.4.42"
rocksdb = { version = "0.24.0", default-features = false, features = [] }
blake3 = "1.8"
rand = "0.9.2"
rayon = "1.11.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3.20.0"

[[bench]]
name = "bench"
harness = false
